Save changes as above

--- a/Login.html
+++ b/Login.html
@@ -1,6 +1,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="CSS/login-reg.css" />
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
 </head>
 <body>
     <div class="border">
